ligolang/src/test/contracts/negative/polymorphism/generalizable_type.mligo
type _foo = | Foo of unit

let f (x : _foo) = x
